# Boids

./: CMakeLists.txt  README.md
include/glad/: glad.h
lib/: glfw3.lib
src/: Boids.cpp  Boids.h  Parameters.cuh  geometryShader.txt  glad.c  helper.h  kernels.cu  kernels.cuh  main.cpp  vertexShader.txt
src/imgui/: imgui_demo.cpp  imgui_tables.cpp  imgui_widgets.cpp
